--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -13,3 +13,15 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #f5f5f5;
 }
+
+header {
+  background-color: #CB2761 ;
+  color: white;
+  text-align: center;
+  padding: 1rem;
+}
+
+.header a {
+  text-decoration: none;
+  color: white;
+}
