--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -25,3 +25,63 @@ header {
   text-decoration: none;
   color: white;
 }
+
+.card {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 16px;
+  width: 80%;
+  margin: 3rem auto;
+}
+
+
+.form-flex {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+
+}
+
+
+.form-flex label {
+  flex-basis: 30%;
+  margin-bottom: 8px;
+}
+
+
+.form-flex input {
+  margin-bottom: 8px;
+}
+
+.country-cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  margin-top: 16px;
+}
+
+.country-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 200px;
+  padding: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.emoji {
+  font-size: 32px;
+  margin-bottom: 8px;
+}
+
+.name {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
