--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -36,23 +36,27 @@ header {
   margin: 3rem auto;
 }
 
-
 .form-flex {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
-
+  justify-content: space-between; 
 }
 
-
-.form-flex label {
-  flex-basis: 30%;
-  margin-bottom: 8px;
+.form-row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px; 
 }
 
+@media screen and (max-width: 600px) {
+  .form-row {
+    flex-direction: column; 
+  }
 
-.form-flex input {
-  margin-bottom: 8px;
+  .text-field, .button {
+    width: 100%; 
+    margin-top: 1rem;
+  }
 }
 
 .country-cards {
